--- a/index.html
+++ b/index.html
@@ -757,6 +757,7 @@
     </div>
 </section>
 
+<a href="order.html" class="btn">Place an Order</a>
 
 
     <!-- Testimonials Section -->
@@ -856,3 +857,4 @@
     </footer>
 </body>
 </html>
+
