--- a/invoice.html
+++ b/invoice.html
@@ -3,8 +3,108 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Invoice</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>Invoice - Cappiono Tweak Café</title>
+  <style>
+    /* Cappiono Tweak Theme */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Poppins', sans-serif;
+    }
+
+    body {
+      background-color: #f9f5f0;
+      color: #3a2e26;
+      line-height: 1.6;
+    }
+
+    .container {
+      max-width: 700px;
+      margin: 80px auto;
+      padding: 40px;
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.08);
+    }
+
+    h2 {
+      font-family: 'Playfair Display', serif;
+      font-size: 2.2rem;
+      color: #3a2e26;
+      text-align: center;
+      margin-bottom: 25px;
+      position: relative;
+    }
+
+    h2::after {
+      content: '';
+      display: block;
+      width: 70px;
+      height: 4px;
+      background: #c7a17a;
+      margin: 12px auto 0;
+      border-radius: 2px;
+    }
+
+    #invoiceDetails {
+      background: #fdfdfc;
+      border: 1px solid #eee;
+      border-radius: 10px;
+      padding: 25px;
+      margin-bottom: 30px;
+    }
+
+    #invoiceDetails p {
+      margin: 10px 0;
+      font-size: 1rem;
+    }
+
+    #invoiceDetails strong {
+      color: #c7a17a;
+    }
+
+    .total {
+      font-size: 1.3rem;
+      font-weight: 700;
+      color: #3a2e26;
+      margin-top: 15px;
+      padding-top: 10px;
+      border-top: 2px dashed #c7a17a;
+    }
+
+    .btn {
+      display: inline-block;
+      margin-top: 10px;
+      background: #c7a17a;
+      color: white;
+      padding: 12px 28px;
+      border: none;
+      border-radius: 30px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      text-decoration: none;
+      text-align: center;
+    }
+
+    .btn:hover {
+      background: #a58562;
+      transform: translateY(-2px);
+    }
+
+    /* Responsive */
+    @media (max-width: 768px) {
+      .container {
+        margin: 40px 20px;
+        padding: 20px;
+      }
+
+      h2 {
+        font-size: 1.8rem;
+      }
+    }
+  </style>
 </head>
 <body>
   <div class="container">
@@ -26,7 +126,7 @@
         <p><strong>Item:</strong> ${orderData.itemName}</p>
         <p><strong>Tweak:</strong> ${orderData.tweakName}</p>
         <p><strong>Quantity:</strong> ${orderData.quantity}</p>
-        <p><strong>Total:</strong> ₹${orderData.total}</p>
+        <p class="total"><strong>Total:</strong> ₹${orderData.total}</p>
       `;
     } else {
       document.getElementById("invoiceDetails").innerHTML = "<p>No order found!</p>";
