--- a/invoice.html
+++ b/invoice.html
@@ -110,7 +110,7 @@
   <div class="container">
     <h2>Order Invoice</h2>
     <div id="invoiceDetails"></div>
-    <a href="Cappiono_tweak.html" class="btn">Back to Home</a>
+    <a href="index.html" class="btn">Back to Home</a>
   </div>
 
   <script>
