--- a/order.html
+++ b/order.html
@@ -136,16 +136,21 @@
 
       <label>Item:</label>
       <select id="item" required>
+        <option value="None" data-price="0">No Tweak</option>
         <option value="Chocolape Frappe" data-price="299">Chocolape Frappe - ₹299</option>
         <option value="Paradiso Tiramisu" data-price="399">Paradiso Tiramisu - ₹399</option>
+        <option value="Aegean Gold Sandwich" data-price="349">Paradiso Tiramisu - ₹349</option>
         <option value="Cold Brew" data-price="269">Cold Brew - ₹269</option>
+        <option value="AAvocado Toast" data-price="439">Paradiso Tiramisu - ₹439</option>
+        <option value="Blueberry Pancakes" data-price="459">Paradiso Tiramisu - ₹459</option>
       </select>
 
       <label>Tweak Option:</label>
       <select id="tweak">
         <option value="None" data-price="0">No Tweak</option>
-        <option value="Extra Shot" data-price="50">Extra Shot - ₹50</option>
-        <option value="Almond Milk" data-price="70">Almond Milk - ₹70</option>
+        <option value="Spiced Mocha Fusion" data-price="439">Extra Shot - ₹439</option>
+        <option value="Tropical Coconut Latte" data-price="379">Almond Milk - ₹379</option>
+        <option value="Honey Oat Cortado" data-price="399">Almond Milk - ₹399</option>
       </select>
 
       <label>Quantity:</label>
