--- a/index.html
+++ b/index.html
@@ -757,8 +757,9 @@
     </div>
 </section>
 
-<a href="order.html" class="btn">Place an Order</a>
-
+<div style="margin-top:20px; text-align:center;">
+  <a href="order.html" class="btn">Place an Order</a>
+</div>
 
     <!-- Testimonials Section -->
     <section class="testimonials" id="testimonials">
@@ -857,4 +858,5 @@
     </footer>
 </body>
 </html>
+
 
