--- a/order.html
+++ b/order.html
@@ -192,5 +192,9 @@
       window.location.href = "invoice.html";
     });
   </script>
+
+<script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore.js"></script>
+
 </body>
 </html>
