--- a/order.html
+++ b/order.html
@@ -136,7 +136,7 @@
 
       <label>Item:</label>
       <select id="item" required>
-        <option value="None" data-price="0">No Tweak</option>
+        <option value="None" data-price="0">No Item</option>
         <option value="Chocolape Frappe" data-price="299">Chocolape Frappe - ₹299</option>
         <option value="Paradiso Tiramisu" data-price="399">Paradiso Tiramisu - ₹399</option>
         <option value="Aegean Gold Sandwich" data-price="349">Aegean Gold Sandwich - ₹349</option>
