--- a/order.html
+++ b/order.html
@@ -168,12 +168,12 @@
 
     // 🔹 Paste your Firebase config from Firebase Console here
     const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_PROJECT_ID.appspot.com",
-      messagingSenderId: "YOUR_SENDER_ID",
-      appId: "YOUR_APP_ID"
+      apiKey: "AIzaSyDAiHCo2WaCmRKH1onyEjgAFf4lsFbA5l8",
+      authDomain: "cappiono-tweak-b944b.firebaseapp.com",
+      projectId: "cappiono-tweak-b944b",
+      storageBucket: "appiono-tweak-b944b.firebasestorage.app",
+      messagingSenderId: "669214716899",
+      appId: "1:669214716899:web:ab404a7c178f0ba34fe6d6"
     };
 
     // Initialize Firebase
